crates/ruff_python_parser/tests/snapshots/invalid_syntax@class_type_params_py311.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/class_type_params_py311.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..113,
        body: [
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 44..95,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 50..53,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 53..90,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 54..69,
                                        name: Identifier {
                                            id: Name("S"),
                                            range: 54..55,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 57..69,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 58..61,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 63..68,
                                                                id: Name("bytes"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                    runtime_elts: None,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 71..79,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 71..72,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 74..79,
                                                    id: Name("float"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 81..84,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 82..84,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 86..89,
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 88..89,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                            runtime_type_params: None,
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 92..95,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 92..95,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_body: None,
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 96..112,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 102..105,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 105..107,
                            node_index: NodeIndex(None),
                            type_params: [],
                            runtime_type_params: None,
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 109..112,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 109..112,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.11"}
2 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
3 | class Foo[]: ...
  |           ^ Syntax Error: Type parameter list cannot be empty


## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.11"}
2 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: Cannot use type parameter lists on Python 3.11 (syntax was added in Python 3.12)
3 | class Foo[]: ...
  |


  |
1 | # parse_options: {"target-version": "3.11"}
2 | class Foo[S: (str, bytes), T: float, *Ts, **P]: ...
3 | class Foo[]: ...
  |          ^^ Syntax Error: Cannot use type parameter lists on Python 3.11 (syntax was added in Python 3.12)
